share/test/regression/type_check/fail/real_1.v
real r = 27;
initial $display(r[0]);
